Add more examples of directive binding. Two way, event handler. Etc.

--- a/client/app/components/users/user.html
+++ b/client/app/components/users/user.html
@@ -1,1 +1,1 @@
-<span>Hello, {{ ngcUserCtrl.userDisplayName }}.</span>
+<span>Hello, {{ ngcUserCtrl.userDisplayName }}. (Alt: {{ ngcUserCtrl.usernameAlt }})</span>
