Add fetching raw user data object after auth

--- a/client/app/components/users/user.html
+++ b/client/app/components/users/user.html
@@ -1,1 +1,3 @@
-<span>Hello, {{ ngcUserCtrl.userDisplayName }}. (Alt: {{ ngcUserCtrl.usernameAlt }})</span>
+<span>Hello, {{ ngcUserCtrl.userDisplayName }}. (Alt: {{ ngcUserCtrl.usernameAlt }})
+<span ng-sasdhow="ngcUserCtrl.userData && ngcUserCtrl.userData._id">ID: {{ngcUserCtrl.userData._id}}</span>
+</span>
