Convert all server interactions to Koast. Extensive changes, but working as I believe is intended. Tests currently broken and need to be re-written for new koast back-end service.

--- a/client/app/components/main/main.html
+++ b/client/app/components/main/main.html
@@ -31,7 +31,7 @@
     </span>
 
     <button
-      ng-click="main.login(loginForm.username, loginForm.password)"
+      ng-click="main.login(loginForm)"
       ng-disabled="loginForm.form.$invalid">Login</button>
     <p>
       Is form valid: {{ !loginForm.form.$invalid }}<br>
